--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-StreetAwareApp/myenv/
-StreetAwareApp/data/
+StreetAwareScripts/myenv/
+StreetAwareScripts/data/
+
+.vscode/
+*.swp
+.DS_Store
+
+.env
